# OctoPrint-Buddycam

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
extras/: README.txt  buddycam.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_buddycam/: __init__.py  util.py
octoprint_buddycam/static/js/: buddycam.js
octoprint_buddycam/templates/: buddycam_settings.jinja2
translations/: README.txt
