[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Buddycam"
version = "0.1.0"
description = "TODO"
authors = [
    {name = "Erik-Gerring", email = "erik.gerring@sydney.edu.au"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_buddycam",
    "octoprint_buddycam.*"
]

[project.entry-points."octoprint.plugin"]
buddycam = "octoprint_buddycam"

[project.urls]
Homepage = "https://github.com/Erik-Gerring/OctoPrint-Buddycam"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
