[metadata]
name = octoprint-buddycam
version = 0.1.0
description = FFmpeg-backed RTSP snapshot endpoint for OctoPrint
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name / FabLab
license = MIT
url = https://github.com/<you>/octoprint-buddycam

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    OctoPrint

[options.entry_points]
octoprint.plugin =
    buddycam = octoprint_buddycam
