[metadata]
name = octoprint-buddycam
version = 0.1.0
description = FFmpeg-backed RTSP snapshot endpoint for OctoPrint
long_description = file: README.md
long_description_content_type = text/markdown
author = Erik-Gerring
author_email = erik.gerring@sydney.edu.au
license = AGPL-3.0-or-later
url = https://github.com/Erik-Gerring/OctoPrint-Buddycam

project_urls =
    Bug Tracker = https://github.com/Erik-Gerring/OctoPrint-Buddycam/issues
    Source Code = https://github.com/Erik-Gerring/OctoPrint-Buddycam

[options]
packages = find:
include_package_data = True
python_requires = >=3.7, <4
install_requires =
    OctoPrint

[options.entry_points]
octoprint.plugin =
    buddycam = octoprint_buddycam
